--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/img/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="assets/img/favicon.png">
+    <link rel="icon" href="asset/img/favicon.ico" type="image/ico">
+    <link rel="apple-touch-icon" href="assets/img/favicon.ico">
     <title>QSequoia2 — Documentation</title>
     <link rel="stylesheet" href="style.css">
 </head>
