modif QGIS version

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                         <h4>Pré-requis</h4>
                         <ul>
-                            <li>QGIS 3.34 ou supérieur</li>
+                            <li>QGIS 3.40 ou supérieur</li>
                             <li>Accès à GitHub</li>
                         </ul>
 
@@ -199,7 +199,7 @@
 
                         <h4>Pré-requis</h4>
                         <ul>
-                            <li>QGIS installé via Homebrew ou DMG</li>
+                            <li>QGIS 3.40 ou supérieur installé via Homebrew ou DMG</li>
                             <li>Accès au dossier plugins utilisateur</li>
                         </ul>
 
@@ -229,7 +229,7 @@
 
                         <h4>Pré-requis</h4>
                         <ul>
-                            <li>QGIS installé via apt, flatpak ou AppImage</li>
+                            <li>QGIS 3.40 ou supérieur installé via apt, flatpak ou AppImage</li>
                             <li>Droits d’écriture dans le dossier plugins</li>
                         </ul>
 
